--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- Ürün 1 -->
     <div class="product">
       <h3>Kılıf Modeli 1</h3>
-      <p>izaf ailesine özel telefon kılfı.</p>
+      <p> Modern araba desenli iphone 13 pro telefon kılıfı.</p>
       <p><strong>Fiyat:</strong> 299 TL</p>
       <a href="#" class="btn">Sepete Ekle</a>
     </div>
@@ -92,6 +92,7 @@
 
 </body>
 </html>
+
 
 
 
